Migrate commands to use slash command framework, remove outdated commands, and enhance null safety throughout the codebase.